tweaked index and updated readme

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>BansheeFever's Homepage!</title>
@@ -12,9 +13,6 @@
 			<div class="column mainContent">
 				<div class="header"> </div>
 				<div class="content">
-					<script type="text/javascript">
-                        document.write(getImageTag());
-                    </script>
 					<h1><img style="vertical-align:middle" src="assets\img\home\icon.png"> Hiya!</h1>
 					<p>
 					Message!<br/>
