--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	<title>BansheeFever :: Projects</title>
     <meta property="test:baseurl" content="/">
     <link rel="stylesheet" href="styles/simple.css">
     <meta charset="utf-8"/>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/img/global/favicon.ico">
 	</head>
 	<body>
 		<div class="mainContainer">
